добавил ускоренный вариант